--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -9,3 +9,5 @@ $primary-text: #fff;
 $secondary-background: #000;
 $alternative-background: #fafafa;
 $secondary-inactive: #e1e1e1;
+
+$max-content-width: 1090px;
