Update styling on form and comment section

--- a/styles/shows.css
+++ b/styles/shows.css
@@ -69,7 +69,6 @@ button {
   .header-wrapper {
     display: flex;
     align-items: flex-end;
-    padding-left: 1rem;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -83,6 +82,16 @@ button {
   padding: 1rem;
   display: block;
   margin: auto;
+}
+@media screen and (min-width: 768px) {
+  .header-wrapper__logo {
+    padding: 1rem 0 1rem 3rem;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .header-wrapper__logo {
+    padding: 1rem 0 1rem 0;
+  }
 }
 .header-wrapper__list {
   display: flex;
@@ -322,6 +331,8 @@ html {
   background-color: rgba(50, 50, 50, 0.5);
   width: 100%;
   height: 100%;
+  display: flex;
+  align-items: center;
 }
 @media screen and (min-width: 768px) {
   .hero-section {
@@ -348,10 +359,9 @@ html {
 @media screen and (min-width: 1280px) {
   .hero {
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     width: 90%;
-    padding: 15rem 5rem 5rem 5rem;
   }
 }
 @media screen and (min-width: 768px) {
@@ -540,7 +550,6 @@ html {
   font-size: 0.8125rem;
   line-height: 1.125rem;
   font-weight: 400;
-  font-weight: 600;
   margin-bottom: 0.5rem;
 }
 @media screen and (min-width: 768px) {
