--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -58,7 +58,7 @@ button {
   @include tablet {
     display: flex;
     align-items: flex-end;
-    padding-left: 1rem;
+    // padding-left: 1rem;
   }
 
   @include desktop {
@@ -71,6 +71,14 @@ button {
     padding: 1rem;
     display: block;
     margin: auto;
+
+    @include tablet {
+      padding: 1rem 0 1rem 3rem;
+    }
+
+    @include desktop {
+      padding: 1rem 0 1rem 0;
+    }
   }
 
   &__list {
