--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -13,6 +13,8 @@
     background-color: rgba($color: $primary-background, $alpha: 0.5);
     width: 100%;
     height: 100%;
+    display: flex;
+    align-items: center;
   }
 
   @include tablet {
@@ -37,10 +39,10 @@
 
   @include desktop {
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     width: 90%;
-    padding: 15rem 5rem 5rem 5rem;
+    // padding: 15rem 1rem 5rem 1rem;
   }
 
   &__text-section {
@@ -208,7 +210,7 @@
 
   &__info {
     @include body-copy-mobile-font;
-    font-weight: 600;
+    // font-weight: 600;
     margin-bottom: 0.5rem;
 
     @include tablet {
